# code-guardrails

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  check_policy.py  pyproject.toml  setup  test_check_policy.py  test_rules.py
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/: explain-guardrail  fix-violations  repair-doctrine  scan-project
.claude/skills/add-rule/: SKILL.md
.claude/skills/add-rule/references/: fixtures.md  rule-patterns.md
.github/workflows/: ci.yml  release.yml
agents/: fix-prompt.md  guardrail-repairer.md
commands/: fix.md  scan.md
docs/: 20260329_re.md  20260329_truth.md  releasing.md
docs/superpowers/plans/: 2026-03-24-code-guardrails-plugin.md
hooks/: hooks.json  post-edit-scan.sh  session-start.sh  stop-verify.sh
policy/: adapters.yml  defaults.yml  ownership.yml
rules/: py-no-env-outside-settings.yml  py-no-fallback-bool-or.yml  py-no-fallback-contextlib-suppress.yml  py-no-fallback-get-default.yml  py-no-fallback-getattr-default.yml  py-no-fallback-identifier.yml  py-no-fallback-next-default.yml  py-no-fallback-os-getenv-default.yml  py-no-swallowing-except-pass.yml  py-no-test-double-identifier.yml  py-no-test-double-unittest-mock.yml  py-no-test-import-in-runtime.yml  ts-no-catch-return-default.yml  ts-no-empty-catch.yml  ts-no-env-outside-settings.yml  ts-no-fallback-identifier.yml  ts-no-fallback-nullish-assign.yml  ts-no-fallback-nullish.yml  ts-no-fallback-or-assign.yml  ts-no-fallback-or.yml  ts-no-promise-catch-default.yml  ts-no-test-double-identifier.yml  ts-no-test-import-in-runtime.yml  tsx-note.txt
scripts/: release.sh
skills/: add-rule.md  guardrails.md
skills/explain-guardrail/: SKILL.md
skills/fix-violations/: SKILL.md
skills/repair-doctrine/: SKILL.md
skills/repair-doctrine/references/: remedies-python.md  remedies-typescript.md
skills/scan-project/: SKILL.md
src/: bench.rs  main.rs
tests/: integration_cli.rs  test_check_policy.py  test_rules.py
(+52 files in other folders)
