[package]
name = "code-guardrails-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
glob = "=0.3.1"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "code-guardrails-engine"
path = "src/main.rs"

[[bin]]
name = "bench"
path = "src/bench.rs"
