[project]
name = "code-guardrails"
version = "0.1.0"
description = "Detect test doubles and unapproved fallbacks in production code"
requires-python = ">=3.12"
dependencies = [
    "PyYAML>=6.0",
]

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "typecheck" },
]
lint = [
    "ruff>=0.11.0",
]
test = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
]
typecheck = [
    "mypy>=1.15",
    "types-PyYAML>=6.0",
]

[project.scripts]
check-policy = "check_policy:main"

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["fixtures"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "UP",    # pyupgrade
    "C",     # mccabe
    "TRY400", # logging.error in exception handler
    "G010",  # logging.warn
]
ignore = [
    "E501",  # line too long (handled by formatter)
]
fixable = ["ALL"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
split-on-trailing-comma = true
force-wrap-aliases = true
combine-as-imports = true
lines-between-types = 1

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true
disallow_any_expr = false

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
